--- a/project/index.html
+++ b/project/index.html
@@ -1,49 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karaciğer Sağlığı</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="anasayfa.html">Hakkımda</a></li>
-                <li><a href="https://github.com/ozan-B">Kaynak Kod</a></li>
-                <li><a href="https://www.linkedin.com/in/ozan-bozkurt-66742919a/">İletişim</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="container">
-        <h1>Kanser tedavisi gördü, beyaz saçı ve sakalı siyah uzadı</h1>
-        <img src="https://im.haberturk.com/l/2024/05/25/ver1716625036/3689527_manset/jpg/414x414" alt="image" class="header-image">
 
-        <div class="content">
-            <p>
-            Antalya'da terzilik yapan Cemil Şimşek, 2022 yılında karın sancısı şikayetiyle Antalya Eğitim Araştırma Hastanesi'ne gitti. Kemoterapi devam ederken aynı zamanda akıllı ilaç tedavisine de başlanan Şimşek'in bir süre sonra saç, sakal ve vücut kılları döküldü. Tedavisi tamamlandıktan sonra vücudunda değişiklikler fark eden Şimşek'in saç ve sakalı uzayınca şaşkınlık yaşadı. Kanser tedavisi öncesinde çoğunluğu beyaz olan sakal ve saçı siyaha döndü. Aralarında beyazlıkların da olduğu saçı ve sakalının neden bu hale döndüğünü öğrenmek için doktoruna danışan Şimşek, akıllı ilacın etkisinden kaynaklandığı cevabını aldı.Cemil Şimşek, değişimin arkadaşlarıyla aralarında esprilere konu olduğunu ifade ederek, “Vücudumda en belirgin değişim, sakallarımın siyaha dönmesi oldu. İnsanlar saçını, sakalını boyatıyor" dedi.Akdeniz Üniversitesi Tıp Fakültesi'nden Doç. Dr. Mustafa Karaca, hastaların akıllı ilaçla ilgili pek çok soru sorduğunu söyledi. 24 yıl önce insan hücresinin DNA'sının bulunmasıyla birlikte kanser hücresinin de DNA'sının bilinir hale geldiğini belirten Doç. Dr. Mustafa Karaca, “Kansere neden olan mutasyonu biliyorsak, bu mutasyona yönelik özel ilaçlar geliştirildi. Çok sık gördüğümüz, meme, akciğer, kolon, cilt, baş-boyun gibi 30'dan fazla kanser türüne akıllı ilaçlar uygulanıyor" diye konuştu.Kemoterapi ilaçlarından farkını da anlatan Doç. Dr. Karaca, kemoterapinin sağlıklı hücreleri de öldürdüğünü ancak akıllı ilacın yalnızca kanserli hücrelere müdahale ettiğini söyledi. Akıllı ilaçların da kendine özgü bazı yan etkileri olduğunu anlatan Doç. Dr. Mustafa Karaca, “Bazen çok şaşırdığımız, saçın bembeyaz çıkma durumu var. Hastalarımızın beyaz olan saç ve sakalları da siyah uzayabiliyor" ifadelerini kullandı. 
-            </p>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 Karaciğer Sağlığı. Tüm hakları saklıdır.</p>
-    </footer>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Ozan Bozkurt</title>
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <body>
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href="cv-site/index.html">Anasayfa</a></li>
+                        <li><a href="https://github.com/ozan-B">İçerik</a></li>
+                        <li><a href="https://www.linkedin.com/in/ozan-bozkurt-66742919a/">İletişim</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="container">
+                <h1>DSÖ: Ruh sağlığı sorunları 'bir sonraki pandemi'</h1>
+                <img src=/images/dummy/placeholder-image.gif alt="image" class="header-image">
 
-    <script>
-        // Tüm li öğelerini seç
-        const liElements = document.querySelectorAll('nav ul li');
+                <div class="content">
+                    <p>
+                    Dünya Sağlık Örgütü (DSÖ) Avrupa Bölge Direktörü Hans Kluge, ruh sağlığı sorunlarını "bir sonraki pandemi" olarak adlandırdığını söyledi.Türkiye'nin farklı şehirlerinde görüşmeler yapmak ve etkinliklere katılmak için 5 günlük ziyaret kapsamında İstanbul'a gelen Kluge, Covid-19 salgınından aşılara, halk sağlığı sorunlarından DSÖ ile Türkiye'nin çalışmalarına kadar geniş bir çerçevede soruları yanıtladı.Kluge, Covid-19 salgınından önemli dersler çıkardıklarını belirterek, bunlardan en önemlisinin sağlık iş gücünün beslenmesi olduğuna, sağlık personelinin emekliye ayrılmasına ve küresel göç sebebiyle Avrupa'da 2 milyon doktor ve hemşire açığının bulunduğuna işaret etti.Öncelikle mevcut sağlık iş gücünün elde tutulması gerektiğini vurgulayan Kluge, "Çok iyi çalışma koşulları oluşturmalı ardından da onların ruh sağlığıyla ilgilenmeliyiz çünkü sağlık iş gücünün kendisinde çok fazla tükenmişlik var" ifadesini kullandı.Kluge, Covid-19 salgınında rutin sağlık hizmetlerinin kesintiye uğradığını hatırlatarak, "Örneğin, çoğu ülkede çocukların rutin aşılanması durduruldu ve şu anda bölgenin hem batısında hem de doğusunda çok sayıda kızamık salgını görüyoruz" dedi.Çıkarılan derslerin, gelecekteki muhtemel sonraki salgınlarda işe yarayacağını dile getiren Kluge, güçlü birinci basamak sağlık sistemine sahip olunması gerektiğini, bu çerçevede 149 ülkenin daha hazırlıklı olmak adına yakında imzalanması beklenen bir "salgın anlaşması" üzerinde müzakerelerde bulunduğunu vurguladı.Kluge, salgın dönemlerinde ülkelerin paylaşımcı olması gerektiğine ve Türkiye'nin salgın dönemindeki yaklaşımına ilişkin şunları söyledi: "Bazı ülkelerin aşılarını, maskelerini paylaşmadıklarını gördük, aynı şey veriler için de geçerli. Burada en başından beri aşılarını, maskelerini, koruyucu ekipmanlarını birçok ülkeyle paylaşan başta Türkiye ve Azerbaycan olmak üzere Türk devletlerine gerçekten çok büyük bir içtenlikle takdirlerimi ifade etmek istiyorum. Dolayısıyla Türk Devletleri Teşkilatı için 'dayanışma' boş bir söz değildi ve bugün tüm ülkelerin yapması gereken de budur. "Aşılar konusunda toplumların yaşadığı tedirginliğe ilişkin Kluge, bir aşının DSÖ tarafından onaylanması için çok katı prosedürlerden geçmesi gerektiğini, dolayısıyla DSÖ'nün onayladığı aşıların güvenli kabul edildiğini belirtti.Kluge, "Aşılar konusunda birçok kişinin endişesini anlıyorum çünkü genellikle yeni aşı geliştirmek yaklaşık 10 yıl sürer, Covid-19 sırasında 1,5 yılda bir değil 4 aşı geliştirilmişti bile. Ancak bu aşıların zaten var olan belirli teknoloji platformuna dayalı olarak geliştirildiğini açıklamamız gerekiyor" diye konuştu.Çok fazla aşı karşıtı hareket olduğunu anımsatan Kluge, "İnsanları suçlamamalıyız, insanların endişelerini dinlemeliyiz" değerlendirmesinde bulundu.Kluge, yeni bir salgın beklentileri olup olmadığıyla ilgili "Bence asıl soru, yeni bir pandemi olup olmayacağı değil, ne zaman olacağıdır" dedi.Küreselleşmenin etkisiyle insanlar arasındaki temasın, hayvanlarla insanlar arasındaki temasın ve ormansızlaşmanın arttığına işaret eden Kluge, buna karşın paniğe kapılmamak, daha iyi hazırlanmak ve dayanışma içinde olmak gerektiğini, kendisinin de bu konuda iyimser olduğunu söyledi.Kluge, insanların ruh sağlığını güçlendirmenin çok önemli olduğuna dikkati çekerek, şöyle devam etti: "Ruh sağlığı sorunlarını 'bir sonraki pandemi' olarak adlandırıyorum. "Kluge, DSÖ-Türkiye ilişkilerine de değinerek, "Türkiye, tüm bölgede en fazla sayıda DSÖ ofisine sahip ülke. Ankara'da ülke ofisimiz var, DSÖ Avrupa Doğal Afetlere Hazırlık Merkezinin bulunduğu ofisimiz var, Gaziantep'te Suriye'nin kuzeybatısındaki insanlara çok sayıda insani yardım sağlayan bir ofisimiz var ve yakın zamanda yönetimi Kopenhag'dan İstanbul'a kaydırdık" diye konuştu.Türkiye'nin çok fazla deneyime sahip olduğunu vurgulayan Kluge, Kahramanmaraş merkezli depremlerden sonra birlikte önemli çalışmalar yaptıklarını ve Adıyaman'da prefabrik birinci basamak sağlık ocağı açacaklarını anlattı.Kluge, Türk Devletleri Teşkilatı ile DSÖ'nün ortaklaşa düzenlediği Acil Sağlık Durumlarında Liderlik Çalıştayı'na da değinerek, Teşkilat ile imzalanan mutabakat zaptı çerçevesinde gelişen ilişkilere sahip olduklarını dile getirdi.İsrail'in Gazze'ye yönelik saldırılarına da işaret eden Kluge, "Bizim en acil ihtiyacımız olan şey, barış. değerlendirmesinde bulundu.Kluge, DSÖ'nün elinden geleni yapmaya çalıştığını ve kanser hastası çocukların Gazze'den tahliye edilmesine yardımcı olduğunu söyledi. Gazze'den 20 kanserli çocuğun tahliyesi için yardım istediği Cumhurbaşkanı Recep Tayyip Erdoğan'ın eşi Emine Erdoğan'ın ve Sağlık Bakanı Fahrettin Koca'nın bu talebi hemen kabul ettiğini belirten Kluge, çocukların tahliyesi konusunda Belçika ve İspanya'nın da yardımcı olmaya başladığını vurguladı.Ateşkesin önemine dikkati çeken Kluge, şunları kaydetti: "Ama tabii ki en önemlisi ateşkes olması. Aynı zamanda tüm rehinelerin iade edilmesi ve tutsak oldukları süre boyunca tıbbi bakıma erişimlerinin sağlanmasını istiyoruz. 
+                    </p>
+                </div>
+            </div>
+            <footer>
+                <p>&copy; 2024 Ozan Bozkurt. Tüm hakları saklıdır.</p>
+            </footer>
+        </body>
+        </html>
 
-        // Her bir li öğesi için click olayını dinle
-        liElements.forEach(li => {
-            // Her li öğesi tıklandığında...
-            li.addEventListener('click', () => {
-                // İlgili li öğesinin içindeki a etiketinin href özelliğine git
-                window.location.href = li.querySelector('a').href;
-            });
-        });
-    </script>
-
-
-</body>
-</html>
+        
